# django-s3direct

./: .browserslistrc  .dockerignore  .drone.yml  .env-dist  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc  .travis.yml  Dockerfile  LICENCE  LICENSE  MANIFEST.in  README.md  cors_example.xml  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  runtests.py  setup.py  setup.sh  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: run-tests.yml
example/: __init__.py  admin.py  apps.py  forms.py  manage.py  models.py  requirements.txt  s3direct  s3upload  s3uploads  urls.py  views.py
example/cat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
example/example/: settings.py  urls.py  wsgi.py
example/kitten/: admin.py  forms.py  models.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/: async_form.html  form.html
s3direct/: __init__.py  fields.py  tests.py  urls.py  utils.py  views.py  widgets.py
s3direct/.ropeproject/: globalnames  objectdb
s3direct/api/: keys.py  serializers.py  utils.py  views.py
s3direct/src/: package.json
s3direct/tests/: __init__.py  requirements.txt  settings.py  test_views.py  test_widgets.py  testcases.py  urls.py  views.py
s3upload/: __init__.py  apps.py  fields.py  tests.py  urls.py  utils.py  views.py  widgets.py
s3upload/src/: package.json
s3uploads/: fields.py  tests.py  urls.py  utils.py  views.py  widgets.py
src/: index.js
tests/: settings.py  test_utils.py  test_widgets.py  urls.py
(+64 files in other folders)
