[tool.poetry]
name = "django-s3-upload"
version = "0.3"
description = "Integrates direct client-side uploading to s3 with Django."
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-s3-upload"
repository = "https://github.com/yunojuno/django-s3-upload"
documentation = "https://github.com/yunojuno/django-s3-upload"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [{ include = "s3upload" }]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2 || ^3.1"
boto3 = "^1.14.48"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = "^19.10b"
freezegun = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
